--- a/src/popup.html
+++ b/src/popup.html
@@ -3,78 +3,334 @@
 <head>
   <title>Google Chat Exporter</title>
   <style>
+    :root {
+      --primary: #1a73e8;
+      --primary-dark: #0d47a1;
+      --accent: #ea4335;
+      --text: #202124;
+      --text-secondary: #5f6368;
+      --background: #ffffff;
+      --background-alt: #f8f9fa;
+      --border: #dadce0;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      width: 300px;
-      padding: 15px;
-      font-family: Arial, sans-serif;
+      width: 340px;
+      font-family: 'Google Sans', 'Segoe UI', Roboto, Arial, sans-serif;
+      color: var(--text);
+      background: var(--background);
+      overflow: hidden;
     }
-    h2 {
-      font-size: 18px;
-      margin-top: 0;
-      color: #1a73e8;
-    }
-    p {
-      font-size: 14px;
-      line-height: 1.5;
-      color: #444;
-      margin-bottom: 15px;
-    }
-    .instruction {
-      background: #f1f3f4;
-      padding: 10px;
-      border-radius: 4px;
-      margin-bottom: 10px;
-    }
-    .instruction-step {
-      margin-bottom: 5px;
+
+    .container {
       display: flex;
+      flex-direction: column;
+      height: 100%;
     }
-    .number {
-      display: inline-block;
-      background: #1a73e8;
+
+    .header {
+      background: var(--primary);
       color: white;
+      padding: 18px 20px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .header::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      right: -20%;
+      width: 200px;
+      height: 200px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+    }
+
+    .header::after {
+      content: '';
+      position: absolute;
+      bottom: -60%;
+      left: -10%;
+      width: 150px;
+      height: 150px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+    }
+
+    .title {
+      display: flex;
+      align-items: center;
+      position: relative;
+      z-index: 2;
+    }
+
+    .logo {
+      background: white;
+      border-radius: 8px;
+      width: 32px;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 12px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .logo svg {
       width: 20px;
       height: 20px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 20px;
-      margin-right: 8px;
-      flex-shrink: 0;
+      fill: var(--primary);
     }
-    .step-text {
+
+    h1 {
+      font-size: 18px;
+      font-weight: 500;
+    }
+
+    .tagline {
+      font-size: 14px;
+      opacity: 0.9;
+      margin-top: 6px;
+      position: relative;
+      z-index: 2;
+    }
+
+    .content {
+      padding: 20px;
       flex: 1;
     }
-    footer {
+
+    .section-title {
+      font-size: 15px;
+      font-weight: 500;
+      margin-bottom: 12px;
+      color: var(--primary-dark);
+    }
+
+    .steps {
+      background: var(--background-alt);
+      border-radius: 10px;
+      padding: 4px;
+      margin-bottom: 20px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+    }
+
+    .step {
+      display: flex;
+      align-items: center;
+      padding: 12px;
+      border-radius: 6px;
+      transition: background 0.2s;
+      position: relative;
+    }
+
+    .step:hover {
+      background: rgba(26, 115, 232, 0.05);
+    }
+
+    .step-number {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 26px;
+      height: 26px;
+      background: var(--primary);
+      color: white;
+      border-radius: 50%;
+      font-size: 14px;
+      margin-right: 12px;
+      font-weight: 500;
+      flex-shrink: 0;
+    }
+
+    .step-text {
+      font-size: 14px;
+      line-height: 1.5;
+    }
+
+    .tip {
+      background: #E8F0FE;
+      border-left: 4px solid var(--primary);
+      padding: 14px;
+      border-radius: 6px;
+      font-size: 13px;
+      line-height: 1.5;
+      color: var(--text);
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 20px;
+    }
+
+    .tip svg {
+      width: 18px;
+      height: 18px;
+      fill: var(--primary);
+      margin-right: 10px;
+      flex-shrink: 0;
+      margin-top: 1px;
+    }
+
+    .footer {
+      padding: 14px 20px;
       font-size: 12px;
-      color: #666;
-      margin-top: 20px;
+      color: var(--text-secondary);
+      border-top: 1px solid var(--border);
       text-align: center;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .footer::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background: linear-gradient(to right, #4285f4, #ea4335, #fbbc05, #34a853);
+      opacity: 0.8;
+    }
+
+    .author-signature {
+      justify-content: center;
+      align-items: center;
+      margin-top: 8px;
+    }
+
+    .author-link {
+      color: var(--primary);
+      text-decoration: none;
+      font-weight: 500;
+      position: relative;
+      transition: transform 0.2s;
+    }
+
+    .author-link:hover {
+      transform: translateY(-1px);
+    }
+
+    .author-link::after {
+      content: '';
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: var(--primary);
+      transform: scaleX(0);
+      transition: transform 0.2s;
+      transform-origin: right;
+    }
+
+    .author-link:hover::after {
+      transform: scaleX(1);
+      transform-origin: left;
+    }
+
+    .version {
+      display: inline-block;
+      background: var(--background-alt);
+      padding: 3px 8px;
+      border-radius: 12px;
+      font-size: 11px;
+      color: var(--text-secondary);
+      margin-left: 6px;
+    }
+
+    /* Animation for the heart icon */
+    .heart {
+      display: inline-block;
+      font-size: 16px;
+      color: red;
+      animation: heartPulse 1.2s infinite ease-in-out;
+    }
+
+    @keyframes heartPulse {
+      0% {
+        transform: scale(1);
+      }
+
+      15% {
+        transform: scale(1.3);
+      }
+
+      30% {
+        transform: scale(1);
+      }
+
+      50% {
+        transform: scale(1.2);
+      }
+
+      70% {
+        transform: scale(1);
+      }
+
+      100% {
+        transform: scale(1);
+      }
     }
   </style>
 </head>
 <body>
-  <h2>Google Chat Exporter</h2>
-  <p>Export your Google Chat conversations to text files.</p>
-  
-  <div class="instruction">
-    <div class="instruction-step">
-      <span class="number">1</span>
-      <span class="step-text">Open a Google Chat conversation</span>
+  <div class="container">
+    <div class="header">
+      <div class="title">
+        <div class="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
+          </svg>
+        </div>
+        <h1>Google Chat Exporter</h1>
+      </div>
+      <p class="tagline">Save your conversations with just a few clicks</p>
     </div>
-    <div class="instruction-step">
-      <span class="number">2</span>
-      <span class="step-text">Right-click anywhere in the chat</span>
+
+    <div class="content">
+      <h2 class="section-title">How it works</h2>
+      <div class="steps">
+        <div class="step">
+          <div class="step-number">1</div>
+          <div class="step-text">Navigate to any Google Chat conversation</div>
+        </div>
+        <div class="step">
+          <div class="step-number">2</div>
+          <div class="step-text">Right-click anywhere in the chat area</div>
+        </div>
+        <div class="step">
+          <div class="step-number">3</div>
+          <div class="step-text">Select "Export Chat Conversation"</div>
+        </div>
+        <div class="step">
+          <div class="step-number">4</div>
+          <div class="step-text">Choose where to save your text file</div>
+        </div>
+      </div>
+
+      <div class="tip">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
+        </svg>
+        <div>This extension ensures all messages are loaded by automatically scrolling to the top of the conversation.</div>
+      </div>
     </div>
-    <div class="instruction-step">
-      <span class="number">3</span>
-      <span class="step-text">Select "Export Chat Conversation"</span>
+
+    <div class="footer">
+      <div>Google Chat Exporter <span class="version">v1.0</span></div>
+      <div class="author-signature">
+        <span>Crafted with </span>
+        <span class="heart"> &hearts; </span>
+        <span> by </span>
+        <a href="https://vishwas.me" target="_blank" class="author-link">Vishwas R</a>
+      </div>
     </div>
   </div>
-  
-  <p>The extension will load all messages and save them as a text file.</p>
-  
-  <footer>
-    Google Chat Exporter v1.0
-  </footer>
 </body>
 </html>
